--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_mocked_test(binrd)
-add_mocked_test(list)
+add_mocked_test(binrd SOURCES ${CMAKE_SOURCE_DIR}/src/logger.c)
+add_mocked_test(list SOURCES ${CMAKE_SOURCE_DIR}/src/logger.c)
